[package]
name = "procedural-crawlers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-watch = "8.5.2"
env_logger = "0.11.3"
log = "0.4.22"
lazy_static = "1.5.0"
rand = "0.8.5"


[dependencies.sdl2]
version = "0.37.0"
default-features = false
features = ["ttf", "image", "gfx"]
